# CS205-Project

./: .gitignore  CMakeLists.txt  main.cpp  main_aclr.cu  tensor.h  tensor_aclr.cuh  tensor_aclr_impl.cuh  tensor_impl.h  test.cu  test_2.cu  test_2.out  test_3.cu  test_3.out  test_3_1.cu  test_aclr.cu  test_extra.cu  test_noaclr.cu  test_openmp.cpp
cereal/: cereal.hpp
cereal/details/: helpers.hpp
